<resources>
    <string name="app_name">MedRem</string>
    <string name="today">Dzisiaj</string>
    <string name="progress">Postęp</string>
    <string name="therapy">Terapia</string>
    <string name="TodayFragmentInitialText">Dodaj jednorazowy wpis oznaczający zażycie leku bądź pomiar</string>
    <string name="TherapyFragmentInitialText">Otrzymuj przypomnienia o lekach, pomiarach i wiele więcej</string>
    <string name="ProgressFragmentInitialText">Kiedy potwierdzisz pierwsze przypomnienia, znajdziesz tutaj wszystkie swoje wcześniejsze wpisy</string>
    <string name="dodaj_jednorazowy_wpis">Dodaj jednorazowy wpis</string>
    <string name="dodaj_przypomnienie">DODAJ PRZYPOMNIENIE</string>
    <string name="wrocText">Wróć</string>
    <string name="nazwa_pomiaru">Nazwa Pomiaru</string>
    <string name="dataText">Data</string>
    <string name="godzina">Godzina</string>
    <string name="zapisz">Zapisz</string>
    <string name="wybierz_typ">Typ przypomnienia</string>
    <string name="wybierz_typ_dawki">Typ dawki</string>
    <string name="dodaj_przypomnienie_title">Dodaj Przypomnienie</string>
    <string name="nazwa_leku">Nazwa leku</string>
    <string name="ustaw">Ustaw</string>
    <string name="dalej">Dalej</string>
    <string name="anuluj">Anuluj</string>
    <string name="dawka">Dawka</string>
    <string name="rodzaj_badania">Podaj Rodzaj Badania</string>
    <string name="powrot">POWROT</string>
    <string name="leki">Leki</string>
    <string name="pomiary">Pomiary</string>
    <string name="od">Od:</string>
    <string name="doo">Do:</string>
    <string-array name="typ_dawki">
        <item>Wybierz Rodzaj Dawkowania</item>
        <item>Gramy</item>
        <item>Czopki</item>
        <item>Kapsulki</item>
        <item>Krople</item>
        <item>Plastry</item>
        <item>Saszetki</item>
        <item>Mililitry</item>
        <item>Łyzeczki</item>
    </string-array>
    <string-array name="typ_przypomnienia">
        <item>Wybierz Typ</item>
        <item>Zazycie Lekarstwa</item>
        <item>Przeprowadzenie Badania</item>
    </string-array>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="logout">"Wyloguj"</string>
</resources>