<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddingMedicineActivity">

    <TextView
        android:id="@+id/nameOfMeasurementTextView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/wybierz_typ_dawki"
        app:layout_constraintBottom_toBottomOf="@+id/spinnerMedicineDoseType"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/spinnerMedicineDoseType" />

    <TimePicker
        android:id="@+id/timePickerMedicine"
        android:layout_width="281dp"
        android:layout_height="83dp"
        android:layout_marginBottom="20dp"
        android:timePickerMode="spinner"
        app:layout_constraintBottom_toTopOf="@+id/calendarMedicine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editTextMedicineName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="12dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/nazwa_leku"
        android:inputType="textPersonName"

        android:minHeight="48dp"
        android:textAlignment="center"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/saveMedicineButton"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/nameOfMeasurementTextView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/dawka"
        app:layout_constraintBottom_toBottomOf="@+id/editTextMedicineDose"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/editTextMedicineDose"
        app:layout_constraintVertical_bias="0.482" />

    <TextView
        android:id="@+id/valueTextView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/nazwa_leku"
        app:layout_constraintBottom_toBottomOf="@+id/editTextMedicineName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/editTextMedicineName" />

    <EditText
        android:id="@+id/editTextMedicineDose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:autofillHints="name"
        android:ems="10"
        android:hint="@string/dawka"
        android:inputType="textPersonName"
        android:labelFor="@id/nameOfMeasurementTextView"
        android:minHeight="48dp"
        android:textAlignment="center"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextMedicineName"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <Button
        android:id="@+id/goBackFromAddingMedicineButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/powrot"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.095"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <CalendarView
        android:id="@+id/calendarMedicine"
        android:layout_width="349dp"
        android:layout_height="260dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/saveMedicineButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zapisz"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.904"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023" />

    <Spinner
        android:id="@+id/spinnerMedicineDoseType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextMedicineDose"
        tools:ignore="SpeakableTextPresentCheck" />
</androidx.constraintlayout.widget.ConstraintLayout>