<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProgressFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/initialTextViewProgress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ProgressFragmentInitialText"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ListView
        android:id="@+id/listViewProgressMedicines"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/showMedicinesProgressButton"
        app:layout_constraintVertical_bias="0.049"
        tools:visibility="gone" />

    <Button
        android:id="@+id/showMedicinesProgressButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/leki"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

    <Button
        android:id="@+id/showMeasurementsProgressButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pomiary"
        app:layout_constraintBottom_toBottomOf="@+id/showMedicinesProgressButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/showMedicinesProgressButton" />

    <ListView
        android:id="@+id/listViewProgressMeasurements"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/showMeasurementsProgressButton"
        app:layout_constraintVertical_bias="0.049"
        tools:visibility="gone" />

</androidx.constraintlayout.widget.ConstraintLayout>